Admin portal refinements

--- a/src/css/apps/admin/adminportal.css
+++ b/src/css/apps/admin/adminportal.css
@@ -10,6 +10,7 @@
 @import url("./adminportal/page/filesystems.css");
 @import url("./adminportal/page/tokens.css");
 @import url("./adminportal/page/activities.css");
+@import url("./adminportal/page/versioning.css");
 @import url("./adminportal/page/scopes.css");
 @import url("./adminportal/page/viewscopes.css");
 @import url("./adminportal/page/auditlog.css");
