--- a/src/css/apps/components/shell/startmenu/applist.css
+++ b/src/css/apps/components/shell/startmenu/applist.css
@@ -1,12 +1,11 @@
-div.shell div.startmenu div.top div.app-list {
+div.shell div.startmenu div.top div.left-pane {
   width: calc(100% - 170px);
   height: 100%;
-
-  padding: 5px;
-  padding-right: 0;
-  overflow-y: scroll;
+  overflow: hidden;
+  position: relative;
 }
-div.shell div.startmenu div.top div.app-list button {
+
+div.shell div.startmenu div.top div.left-pane button {
   display: flex;
   align-items: center;
   gap: 10px;
@@ -17,37 +16,36 @@ div.shell div.startmenu div.top div.app-list button {
   text-align: left;
 }
 
-div.shell div.startmenu div.top div.app-list button.no-safemode {
+div.shell div.startmenu div.top div.left-pane button.no-safemode {
   opacity: 0.7;
   filter: grayscale(100%);
 }
 
-.theme-light #arcShell > div.body div.shell div.startmenu div.top div.app-list button {
+div.shell div.startmenu div.top div.left-pane button:hover {
+  background-color: var(--button-glass-bg);
+}
+
+div.shell div.startmenu div.top div.left-pane button:active {
+  background-color: var(--button-glass-active-bg);
+}
+
+.theme-light #arcShell > div.body div.shell div.startmenu div.top div.left-pane button {
   --button-glass-bg: #0001 !important;
 }
 
-div.shell div.startmenu div.top div.app-list button span p,
-div.shell div.startmenu div.top div.app-list button span {
+div.shell div.startmenu div.top button img {
+  height: 24px;
+}
+
+div.shell div.startmenu div.top div.left-pane button span p,
+div.shell div.startmenu div.top div.left-pane button span {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
 }
 
-div.shell div.startmenu div.top div.app-list button span p.description {
+div.shell div.startmenu div.top div.left-pane button span p.description {
   opacity: 0.5;
-}
-
-div.shell div.startmenu div.top div.app-list button span {
-  max-width: calc(100% - 34px);
-  display: block;
-}
-
-div.shell div.startmenu div.top div.app-list button img {
-  height: 24px;
-}
-
-div.shell div.startmenu div.top div.app-list button:hover {
-  background-color: var(--button-glass-bg);
 }
 
 div.shell div.startmenu div.top div.searching p.no-results {
@@ -55,41 +53,95 @@ div.shell div.startmenu div.top div.searching p.no-results {
   margin-top: 20px;
   opacity: 0.5;
 }
-div.shell div.startmenu div.top div.app-list.searching {
+div.shell div.startmenu div.top div.left-pane.searching {
   overflow-y: hidden;
 }
 
-div.shell div.startmenu div.top div.app-list.searching.loading {
+div.shell div.startmenu div.top div.left-pane.searching.loading {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-div.shell div.startmenu div.top div.app-list.searching button {
+div.shell div.startmenu div.top div.left-pane.searching button {
   transition: none;
 }
 
-div.shell div.startmenu div.top div.app-list.searching button.selected {
+div.shell div.startmenu div.top div.left-pane.searching button.selected {
   background-color: var(--accent-transparent);
 }
 
-div.shell div.startmenu div.top div.app-list button.expander span.lucide {
-  font-size: 16px;
+div.shell div.startmenu div.top div.app-groups {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+div.shell div.startmenu div.top div.app-groups div.inner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: fit-content;
+  display: flex;
+  height: 100%;
+  transition: margin-left 0.2s;
+}
+
+div.shell div.startmenu:not(.opened) div.top div.app-groups div.inner {
+  transition-delay: 0.5s;
+}
+
+div.shell div.startmenu div.top div.app-groups div.inner.shift {
+  margin-left: -222px;
+}
+
+div.shell div.startmenu div.top div.app-groups div.inner div.panel {
+  width: 222px;
+  height: 100%;
+  padding: 5px;
+  overflow-y: scroll;
+  padding-right: 0;
+}
+
+div.shell div.startmenu div.top div.app-groups div.inner div.panel.listing button span.lucide {
   margin-left: auto;
   opacity: 0.5;
-  width: 16px;
-  height: 16px;
-  transition: transform 0.1s;
+  font-size: 16px;
 }
 
-div.shell div.startmenu div.top div.app-list div.app-group div.items {
-  padding-left: 15px;
+div.shell div.startmenu div.top div.app-groups div.inner button.back span.lucide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  width: 24px;
+  height: 24px;
 }
 
-div.shell div.startmenu div.top div.app-list button.expander.expanded {
-  background-color: var(--accent-transparent);
+div.shell div.startmenu div.top div.app-groups div.inner div.panel.group {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+div.shell div.startmenu div.top div.app-groups div.inner div.panel.group div.group-list {
+  height: 0;
+  flex-grow: 1;
+  overflow-y: auto;
 }
 
-div.shell div.startmenu div.top div.app-list button.expander.expanded span.lucide {
-  transform: rotate(90deg);
+div.shell div.startmenu div.top div.app-groups div.inner div.panel.group hr {
+  border: none;
+  border-top: var(--button-glass-bg) 1px solid;
+  margin-bottom: 10px;
+}
+
+div.shell div.startmenu div.top div.app-listing {
+  padding: 5px;
+  padding-right: 0;
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
 }
