Various bug fixes

--- a/src/css/apps/user/filemanager.css
+++ b/src/css/apps/user/filemanager.css
@@ -24,7 +24,7 @@
   height: calc(100% - 45px);
 }
 
-#fileManager > div.overlay-wrapper > div.window.overlay {
+#fileManager > div.window-overlay-wrapper > div.window.overlay {
   top: 15px;
   scale: 1 !important;
   margin-top: -100px;
