--- a/src/css/apps/components/shell.css
+++ b/src/css/apps/components/shell.css
@@ -33,8 +33,8 @@
   pointer-events: initial !important;
 }
 
-#arcShell div.overlay-wrapper,
-#arcShell div.overlay-wrapper * {
+#arcShell div.window-overlay-wrapper,
+#arcShell div.window-overlay-wrapper * {
   pointer-events: initial !important;
 }
 
