(wip) fast window switching in ArcOS v7

--- a/src/css/apps/components/shell.css
+++ b/src/css/apps/components/shell.css
@@ -4,6 +4,7 @@
 @import url("./shell/workspaces.css");
 @import url("./shell/workspaceindicator.css");
 @import url("./shell/pushnotification.css");
+@import url("./shell/windowswitcher.css");
 @import url("./shell/colored.css");
 
 #arcShell {
