--- a/src/css/apps/components/shell/taskbar/openedapps.css
+++ b/src/css/apps/components/shell/taskbar/openedapps.css
@@ -120,3 +120,13 @@ div.shell div.taskbar div.opened-apps button.active img.backdrop {
 .theme-light #arcShell div.shell div.taskbar div.opened-apps button:not(.active) {
   opacity: 0.7;
 }
+
+.opened-app.blinking {
+  animation: blinking 1s infinite alternate;
+}
+
+@keyframes blinking {
+  to {
+    background-color: var(--clr-red-fg);
+  }
+}
