made it use focusedPid and a more specific css selector

--- a/src/css/apps/components/shell/taskbar/openedapps.css
+++ b/src/css/apps/components/shell/taskbar/openedapps.css
@@ -121,7 +121,7 @@ div.shell div.taskbar div.opened-apps button.active img.backdrop {
   opacity: 0.7;
 }
 
-.opened-app.blinking {
+#arcShell > div.body div.taskbar button.opened-app.blinking {
   animation: blinking 1s infinite alternate;
 }
 
